# rust-graphql-perf

./: Cargo.toml  LICENSE  cargo-timing-20250920T075308.995108128Z.html  cargo-timing-new-dev.html  cargo-timing-new-release.html  cargo-timing-old-dev.html  cargo-timing-old-release.html  schema.graphql  summarize_new_data.txt  summarize_old_data.txt
src/: main.rs
src/controllers/: instance0.rs  instance1.rs  instance10.rs  instance11.rs  instance12.rs  instance13.rs  instance14.rs  instance15.rs  instance16.rs  instance17.rs  instance18.rs  instance19.rs  instance2.rs  instance20.rs  instance21.rs  instance22.rs  instance23.rs  instance24.rs  instance25.rs  instance26.rs  instance27.rs  instance28.rs  instance29.rs  instance3.rs  instance30.rs  instance31.rs  instance32.rs  instance33.rs  instance34.rs  instance35.rs  instance36.rs  instance37.rs  instance38.rs  instance39.rs  instance4.rs  instance40.rs  instance41.rs  instance42.rs  instance43.rs  instance44.rs  (+62 more)
